<resources>
    <string name="app_name">Your Order</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="UserName">User Name</string>
    <string name="Login">Login</string>
    <string name="NewUser">¿New User?,</string>
    <string name="Password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="Email">E-mail</string>
    <string name="CellPhone">CellPhone</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="welcome">"Welcome, "</string>
    <string name="Products">Products</string>
    <string name="MyOrders">My Orders</string>
    <string name="Promotions">Promotions</string>
    <string name="Exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="dish">Dish</string>
    <string name="OurProducts">Our Products</string>
    <string name="profile">Profile</string>
    <string name="Ingredients">Ingredients</string>
    <string name="price">Price</string>
    <string name="drinks">Drinks</string>
    <string name="plus">Plus</string>
    <string name="changepassword">Change Password</string>
    <string name="Add">+</string>
    <string name="X">X</string>
    <string name="send">Send</string>
</resources>
