<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/Home" />

        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_local_dining"
            android:title="@string/Products" />
        <item
            android:id="@+id/nav_drinks"
            android:icon="@drawable/ic_local_bar"
            android:title="@string/drinks" />
        <item
            android:id="@+id/nav_myorders"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/MyOrders" />
        <item
            android:id="@+id/nav_promotions"
            android:icon="@drawable/ic_action_achievement"
            android:title="@string/Promotions" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/Exit" />


    </group>



</menu>
