<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_centerHorizontal="true"
    android:layout_centerInParent="true"
    android:layout_centerVertical="true"
    android:layout_margin="8dp"
    android:background="@color/selector_lime_focused"
    android:elevation="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/id_img_dish"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/drinks"
                app:civ_border_color="@color/material_lime_300"
                app:civ_border_width="2dp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/plus"
                android:scaleType="centerCrop"
                android:src="@drawable/plus" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/id_img_drink"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/drinks"
                app:civ_border_color="@color/material_red_300"
                app:civ_border_width="2dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_txt_promoname"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/material_purple_a400"
                android:text="@string/Promotions" />

            <TextView
                android:id="@+id/id_txt_promovalue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/material_purple_a400"
                android:gravity="end"
                android:text="@string/Promotions" />
        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>