<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Controllers.SelectDrinksActivity"
    tools:layout_editor_absoluteY="81dp">


    <ImageView
        android:id="@+id/img_dish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/dish"
        android:cropToPadding="true"
        android:scaleType="centerCrop" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/number_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                app:np_dividerColor="@color/selector_black_focused"
                app:np_formatter="1"
                app:np_max="59"
                app:np_min="0"
                app:np_orientation="horizontal"
                app:np_selectedTextColor="@color/cardview_dark_background"
                app:np_selectedTextSize="@dimen/text_size"
                app:np_textColor="@color/colorPrimary"
                app:np_textSize="@dimen/text_size"
                app:np_value="5">


            </com.shawnlin.numberpicker.NumberPicker>

            <TextView
                android:id="@+id/id_txt_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:text="5000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/id_btn_add"
                style="@style/button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/material_green_a700"
                android:text="@string/Add" />

            <Button
                android:id="@+id/id_btn_close"
                style="@style/button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/material_red_a700"
                android:text="@string/X" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>